--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -46,8 +46,8 @@ jobs:
     - name: Export terraform outputs
       id: tfout
       run: |
-        echo "EB_APP=$(terraform output -raw app_name)" >> $GITHUB_OUTPUT
-        echo "EB_ENV=$(terraform output -raw env_name)" >> $GITHUB_OUTPUT
+        echo "EB_APP=$(terraform output -raw tom-eb-app)" >> $GITHUB_OUTPUT
+        echo "EB_ENV=$(terraform output -raw tom-eb-app-env)" >> $GITHUB_OUTPUT
 
     - name: Generate deployment package
       working-directory: ./nodejs
